--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -29,7 +32,7 @@
             <button type="button">Order Service</button>
         </section> 
         <section>
-            <h2>That h2 header missing from the markup</h2>
+            <h2 class="pronciples">Our Principles</h2>
             <ul>
             <li><h3>Strategy</h3>
             <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
@@ -42,7 +45,7 @@
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2 class="our-team">Our Team</h2>
             <ul>
             <li><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
             <h3>Mark Guerrero</h3>
@@ -57,6 +60,9 @@
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p></li>
             </ul>
+        </section>
+        <section>
+            <h2 class="Portfolio">Our Portfolio</h2>
         </section>
            </main>
     <footer>
