--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
         </section>
         <section>
             <h2 class="Portfolio">Our Portfolio</h2>
+            <ul>
+                <li><img src="./images/banking_app.jpg" alt="Banking App" width="360">
+                <h3>Banking App</h3>
+                <p>App</p></li>
+                <li><img src="./images/cashless_payment.jpg" alt="Cashless payment" width="360">
+                <h3> Cashless Payment</h3>
+                <p>Marketing</p></li>
+                <li><img src="./images/meditation_app.jpg" alt="Meditation app" width="360">
+                <h3>Meditation app</h3>
+                <p>App</p></li>
+                <li><img src="./images/taxi_service.jpg" alt="Taxi Service" width="360">
+                <h3>Taxi Service</h3>
+                <p>Marketing</p></li>
+                <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" width="360"></li>
+                <h3>Screen Illustrations</h3>
+                <p>Design</p></li>
+                <li> <img src="./images/online_courses.jpg" alt="Online Courses" width="360">
+                <h3>Online Courses</h3>
+                <p>Marketing</p></li>
+            </ul>
         </section>
            </main>
     <footer>
