--- a/index.html
+++ b/index.html
@@ -3,62 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a class="link" href="/index.html">WebStudio</a>
+            <a href="/index.html" class="link">WebStudio</a>
             <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <li><a href="" class="link">Studio</a></li>
+            <li><a href="" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
             </ul>      
         </nav>
         <address>
             <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>  
+        <section class="solutions">  
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section> 
         <section>
-            <h2 class="pronciples">Our Principles</h2>
+            <h2 class="principles">Our Principles</h2>
             <ul>
             <li><h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+            <p class="small-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
             <li><h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+            <p class="small-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
             <li><h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+            <p class="small-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
             <li><h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+            <p class="small-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
         </section>
-        <section>
+        <section class="team-card">
             <h2 class="our-team">Our Team</h2>
             <ul>
             <li><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p></li>
+            <p class="small-text">Product Designer</p></li>
             <li><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p></li>
+            <p class="small-text">Frontend Developer</p></li>
             <li><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
             <h3>Camila Garcia</h3>
-            <p>Marketing</p></li>
+            <p class="small-text">Marketing</p></li>
             <li><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p></li>
+            <p class="small-text">UI Designer</p></li>
             </ul>
         </section>
         <section>
@@ -66,27 +66,27 @@
             <ul>
                 <li><img src="./images/banking_app.jpg" alt="Banking App" width="360">
                 <h3>Banking App</h3>
-                <p>App</p></li>
+                <p class="small-text">App</p></li>
                 <li><img src="./images/cashless_payment.jpg" alt="Cashless payment" width="360">
                 <h3> Cashless Payment</h3>
-                <p>Marketing</p></li>
+                <p class="small-text">Marketing</p></li>
                 <li><img src="./images/meditation_app.jpg" alt="Meditation app" width="360">
                 <h3>Meditation app</h3>
-                <p>App</p></li>
+                <p class="small-text">App</p></li>
                 <li><img src="./images/taxi_service.jpg" alt="Taxi Service" width="360">
                 <h3>Taxi Service</h3>
-                <p>Marketing</p></li>
-                <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" width="360"></li>
+                <p class="small-text">Marketing</p></li>
+                <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" width="360">
                 <h3>Screen Illustrations</h3>
-                <p>Design</p></li>
+                <p class="small-text">Design</p></li>
                 <li> <img src="./images/online_courses.jpg" alt="Online Courses" width="360">
                 <h3>Online Courses</h3>
-                <p>Marketing</p></li>
+                <p class="small-text">Marketing</p></li>
             </ul>
         </section>
            </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="link">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
