--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <li><a href="" class="link">Contacts</a></li>
             </ul>      
         </nav>
-        <address>
+        <address class="address-tag">
             <ul>
-            <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section class="solutions">  
-            <h1 class="header1">Effective Solutions for Your Business</h1>
+            <h1 class="header_solutions">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section> 
         <section>
@@ -49,7 +49,7 @@
         </section>
         <section class="team-card">
             <h2 class="our-team">Our Team</h2>
-            <ul>
+            <ul class="team-list">
             <li class="li-team"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="small-text">Product Designer</p></li>
@@ -68,28 +68,28 @@
             <h2 class="portfolio-header">Our Portfolio</h2>
             <ul>
                 <li><img src="./images/banking_app.jpg" alt="Banking App" width="360">
-                <h3 class="portfolio-h3">Banking App</h3>
+                <h3 class="portfolio_service">Banking App</h3>
                 <p class="portfolio-item">App</p></li>
                 <li><img src="./images/cashless_payment.jpg" alt="Cashless payment" width="360">
-                <h3 class="portfolio-h3"> Cashless Payment</h3>
+                <h3 class="portfolio_service"> Cashless Payment</h3>
                 <p class="portfolio-item">Marketing</p></li>
                 <li><img src="./images/meditation_app.jpg" alt="Meditation app" width="360">
-                <h3 class="portfolio-h3">Meditation App</h3>
+                <h3 class="portfolio_service">Meditation App</h3>
                 <p class="portfolio-item">App</p></li>
                 <li><img src="./images/taxi_service.jpg" alt="Taxi Service" width="360">
-                <h3 class="portfolio-h3">Taxi Service</h3>
+                <h3 class="portfolio_service">Taxi Service</h3>
                 <p class="portfolio-item">Marketing</p></li>
                 <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" width="360">
-                <h3 class="portfolio-h3">Screen Illustrations</h3>
+                <h3 class="portfolio_service">Screen Illustrations</h3>
                 <p class="portfolio-item">Design</p></li>
                 <li> <img src="./images/online_courses.jpg" alt="Online Courses" width="360">
-                <h3 class="portfolio-h3">Online Courses</h3>
+                <h3 class="portfolio_service">Online Courses</h3>
                 <p class="portfolio-item">Marketing</p></li>
             </ul>
         </section>
            </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-link">Web<span class="footer-span">Studio</span></a>
+        <a href="./index.html" class="footer-logo">Web<span class="footer-span">Studio</span></a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
