--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <section>
             <h2 class="principles">Our Principles</h2>
             <ul>
-            <li><h3 class="header3">Strategy</h3>
+            <li><h3 class="header-principles">Strategy</h3>
             <p class="small-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-            <li><h3 class="header3">Punctuality</h3>
+            <li><h3 class="header-principles">Punctuality</h3>
             <p class="small-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-            <li><h3 class="header3">Diligence</h3>
+            <li><h3 class="header-principles">Diligence</h3>
             <p class="small-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-            <li><h3 class="header3">Technologies</h3>
+            <li><h3 class="header-principles">Technologies</h3>
             <p class="small-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
         </section>
